finalisation des tests sur les Tickets