@@ -10,7 +10,6 @@ import org.springframework.data.domain.Page;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * Copyright (c) 2024, Iforce5, All Right Reserved.
@@ -31,21 +30,35 @@ public class TicketResponseDTO {
     private String titre;
     private String description;
     private StatutTicketEnum statut;
+    private Long idUser;
 
+    /**
+     * @param entity l'entitée Ticket
+     * @return la DTO de reponse d'un ticket
+     */
     public static TicketResponseDTO buildFromEntity(Ticket entity){
-        return Objects.isNull(entity) ? null : TicketResponseDTO.builder()
+        if (Objects.isNull(entity) ) return null;
+        return TicketResponseDTO.builder()
                 .id(entity.getId())
                 .titre(entity.getTitre())
                 .description(entity.getDescription())
                 .statut(entity.getStatut())
+                .idUser(Objects.nonNull(entity.getUser()) ? entity.getUser().getId() : null)
                 .build();
     }
 
+    /**
+     * @param entityList liste non paginée de ticket
+     * @return liste non paginée de ticket
+     */
     public static List<TicketResponseDTO> buildFromEntityList(List<Ticket> entityList){
         return Objects.isNull(entityList) || entityList.isEmpty() ? new ArrayList<>() :
-                entityList.stream().map(TicketResponseDTO::buildFromEntity).collect(Collectors.toList());
+                entityList.stream().map(TicketResponseDTO::buildFromEntity).toList();
     }
-
+    /**
+     * @param entityPage liste Paginée de ticket
+     * @return liste paginée de ticket
+     */
     public static Page<TicketResponseDTO> buildFromEntityPage(Page<Ticket> entityPage){
         return Objects.isNull(entityPage) || entityPage.isEmpty() ? Page.empty() :
                 entityPage.map(TicketResponseDTO::buildFromEntity);
